crates/grafana-plugin-sdk-macros/tests/ui-fail/missing_services.rs
#![allow(dead_code, unused_variables)]

mod a {
    #[derive(Clone)]
    struct MyPlugin;

    #[grafana_plugin_sdk::main]
    async fn plugin() -> MyPlugin {
        MyPlugin
    }
}

fn main() {}
